--- a/paginas/index.html
+++ b/paginas/index.html
@@ -6,19 +6,23 @@
     <meta charset="utf-8">
 </head>
 
-<body>
-    <div>
-        <h4>Home</h4>
-        <a href="teste.html">
-            <h4>Sobre</h4>
+<body style="background-color:whitesmoke;">
+    <ul style="display: flex; justify-content: space-around;">
+        <a>Home</a>
+        <a style="text-decoration: none; color:black;" href="C:\Users\820131100\Documents\site\paginas\Sobre.html">
+           Sobre
         </a>
-        <a href="contato.html">
-            <h4>Contato</h4>
+        <a style="text-decoration: none; color:black;" href="C:\Users\820131100\Documents\site\paginas\contato.html">
+           Contato
         </a>
-    </div>
+    </ul>
     <hr>
-    <img src="../assets/download.jpg" justify="center">
-    <h2>Eu sou Callegaz!</h2>
+    
+        <div>
+            <img style=" display: block;margin-left: auto;margin-right: auto;" src="../assets/imgs/perfil.jpg">
+        </div>
+        <h2 style="text-align:center;">Eu sou Callegaz!</h2>
+   
     <h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum tellus eget dignissim venenatis.
         Pellentesque quis dictum mauris, vitae volutpat mauris. Vestibulum varius sit amet risus ut porttitor. Nunc
