--- a/paginas/Sobre.html
+++ b/paginas/Sobre.html
@@ -4,28 +4,29 @@
 <head>
     <title>Home Callegaz</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../assets/syles/estilo.css">
 </head>
 
-<body style="background-color:whitesmoke;">
+<body sclass="body">
     <div>
-        <ul style="display: flex; justify-content: space-around;">
-            <a style="text-decoration: none; color:black;" href="C:\Users\820131100\Documents\site\paginas\index.html">
-                <h4>Home</h4>
+        <ul class="menu">
+            <a class="abas" href="index.html">
+                Home
             </a>
-            <h4>Sobre</h4>
-            <a style="text-decoration: none; color:black;"
-                href="C:\Users\820131100\Documents\site\paginas\contato.html">
-                <h4>Contato</h4>
+            <a class="abaAtual">Sobre</a>
+            <a class="abas"
+                href="contato.html">
+                Contato
             </a>
         </ul>
     </div>
     <hr>
     <h2 style="text-align: center; ">Meus Hobbies</h2>
     <h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h3>
-    <div style="display: flex; justify-content: space-around;">
-        <img src="../assets/imgs/hobbies.jpg" style="align-self: left; width: 500px; height: 300px;">
+    <div class="menu">
+        <img src="../assets/imgs/hobbies.jpg" class="imgHobbie">
         <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum tellus eget dignissim
+            <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum tellus eget dignissim
                 venenatis.
                 Pellentesque quis dictum mauris, vitae volutpat mauris. Vestibulum varius sit amet risus ut porttitor.
                 Nunc
