--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -4,19 +4,38 @@
 <head>
     <title>Home Callegaz</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../assets/syles/estilo.css">
+
 </head>
 
 <body>
-    <div>
-        <a href="C:\Users\820131100\Documents\site\paginas\index.html">
-            <h4>Home</h4>
+    <ul class="menu">
+        <a class="abas" href="index.html">Home</a>
+        <a class="abas" href="Sobre.html">
+            Sobre
         </a>
-        <a href="C:\Users\820131100\Documents\site\paginas\Sobre.html">
-            <h4>Sobre</h4>
+        <a class="abaAtual" >
+            Contato
         </a>
-        <h4>Contato</h4>
-    </div>
+    </ul>
     <hr>
+
+    <div class="inputs">
+
+        <h4>
+            Dados para Contatos
+        </h4>
+
+        <p>
+            <textarea rows="4" cols="60"></textarea>
+        </p>
+        <input type="text" placeholder="Nome">
+        <input type="text" placeholder="Email">
+        <br>
+        <input type="submit" value="Enviar" class="botao">
+        <br>
+        <input type = "checkbox"><span>Marque caso deseje receber novidades sobre meus projetos em seu e-mail</span>
+    </div>
 
 </body>
 
