--- a/paginas/index.html
+++ b/paginas/index.html
@@ -4,24 +4,25 @@
 <head>
     <title>Home Callegaz</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../assets/syles/estilo.css">
 </head>
 
-<body style="background-color:whitesmoke;">
-    <ul style="display: flex; justify-content: space-around;">
-        <a>Home</a>
-        <a style="text-decoration: none; color:black;" href="C:\Users\820131100\Documents\site\paginas\Sobre.html">
+<body class="body">
+    <ul class="menu">
+        <a class="abaAtual">Home</a>
+        <a class="abas" href="Sobre.html">
            Sobre
         </a>
-        <a style="text-decoration: none; color:black;" href="C:\Users\820131100\Documents\site\paginas\contato.html">
+        <a class="abas" href="contato.html">
            Contato
         </a>
     </ul>
     <hr>
     
+    <h2 style="text-align:center;">Eu sou Callegaz!</h2>
         <div>
-            <img style=" display: block;margin-left: auto;margin-right: auto;" src="../assets/imgs/perfil.jpg">
+            <img class="perfil" src="../assets/imgs/perfil.jpg">
         </div>
-        <h2 style="text-align:center;">Eu sou Callegaz!</h2>
    
     <h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum tellus eget dignissim venenatis.
