--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -32,7 +32,7 @@
         <input type="text" placeholder="Nome">
         <input type="text" placeholder="Email">
         <br>
-        <input type="submit" value="Enviar" class="botao">
+        <button class="botao">Enviar</button>
         <br>
         <input type = "checkbox"><span>Marque caso deseje receber novidades sobre meus projetos em seu e-mail</span>
     </div>
