--- a/paginas/Sobre.html
+++ b/paginas/Sobre.html
@@ -10,13 +10,12 @@
 <body sclass="body">
     <div>
         <ul class="menu">
-            <a class="abas" href="index.html">
-                Home
+            <a href="index.html">
+                <img src="../assets/imgs/home-icon.png" class="email">
             </a>
-            <a class="abaAtual">Sobre</a>
-            <a class="abas"
-                href="contato.html">
-                Contato
+            <a ><img src="../assets/imgs/person.png" class="email"></a>
+            <a href="contato.html">
+                <img src="../assets/imgs/email.png" class="email">
             </a>
         </ul>
     </div>
@@ -26,7 +25,8 @@
     <div class="menu">
         <img src="../assets/imgs/hobbies.jpg" class="imgHobbie">
         <div>
-            <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum tellus eget dignissim
+            <p class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum tellus eget
+                dignissim
                 venenatis.
                 Pellentesque quis dictum mauris, vitae volutpat mauris. Vestibulum varius sit amet risus ut porttitor.
                 Nunc
