--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -10,22 +10,22 @@
 
 <body>
     <ul class="menu">
-        <a class="abas" href="index.html">Home</a>
-        <a class="abas" href="Sobre.html">
-            Sobre
+        <a href="index.html"><img src="../assets/imgs/home-icon.png" class="email"></a>
+        <a  href="Sobre.html">
+                <img src="../assets/imgs/person.png" class="email">
         </a>
-        <a class="abaAtual" >
-            Contato
+        <a>
+            <img src="../assets/imgs/email.png" class="email">
         </a>
     </ul>
     <hr>
 
     <div class="inputs">
 
-        <h4>
-            Dados para Contatos
-        </h4>
-
+        <h2>
+            Fale comigo
+        </h2>
+        
         <p>
             <textarea rows="4" cols="60"></textarea>
         </p>
