--- a/paginas/index.html
+++ b/paginas/index.html
@@ -9,21 +9,23 @@
 
 <body class="body">
     <ul class="menu">
-        <a class="abaAtual">Home</a>
-        <a class="abas" href="Sobre.html">
-           Sobre
+        <a>
+            <img src="../assets/imgs/home-icon.png" class="email">
         </a>
-        <a class="abas" href="contato.html">
-           Contato
+        <a href="Sobre.html">
+            <img src="../assets/imgs/person.png" class="email">
+        </a>
+        <a href="contato.html">
+            <img src="../assets/imgs/email.png" class="email">
         </a>
     </ul>
     <hr>
-    
+
     <h2 style="text-align:center;">Eu sou Callegaz!</h2>
-        <div>
-            <img class="perfil" src="../assets/imgs/perfil.jpg">
-        </div>
-   
+    <div>
+        <img class="perfil" src="../assets/imgs/perfil.jpg">
+    </div>
+
     <h3>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam bibendum tellus eget dignissim venenatis.
         Pellentesque quis dictum mauris, vitae volutpat mauris. Vestibulum varius sit amet risus ut porttitor. Nunc
