--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -11,8 +11,8 @@
 <body>
     <ul class="menu">
         <a href="index.html"><img src="../assets/imgs/home-icon.png" class="email"></a>
-        <a  href="Sobre.html">
-                <img src="../assets/imgs/person.png" class="email">
+        <a href="Sobre.html">
+            <img src="../assets/imgs/person.png" class="email">
         </a>
         <a>
             <img src="../assets/imgs/email.png" class="email">
@@ -25,16 +25,17 @@
         <h2>
             Fale comigo
         </h2>
-        
-        <p>
-            <textarea rows="4" cols="60"></textarea>
-        </p>
-        <input type="text" placeholder="Nome">
-        <input type="text" placeholder="Email">
-        <br>
-        <button class="botao">Enviar</button>
-        <br>
-        <input type = "checkbox"><span>Marque caso deseje receber novidades sobre meus projetos em seu e-mail</span>
+        <form action="contato.html" method="post">
+            <p>
+                <textarea name="texto" rows="4" cols="60"></textarea>
+            </p>
+            <input name="nome" type="text" placeholder="Nome">
+            <input name="email" type="mail" placeholder="Email">
+            <br>
+            <button type="submit" class="botao">Enviar</button>
+            <br>
+            <input type="checkbox"><span>Marque caso deseje receber novidades sobre meus projetos em seu e-mail</span>
+        </form>
     </div>
 
 </body>
